samples/_failures_safe/1761514750_95c738_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8158ca1.c: In function ‘main’:
./samples/SAFE/__tmp_d8158ca1.c:194:17: error: expected ‘)’ at end of input
  194 |     if (len == 0
      |        ~        ^
      |                 )
./samples/SAFE/__tmp_d8158ca1.c:194:5: error: expected declaration or statement at end of input
  194 |     if (len == 0
      |     ^~
